# PolygonDesignerTeaching

./: CMakeLists.txt  README.md  canvas.cpp  canvas.h  canvas.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  polygon.cpp  polygon.h
